--- a/Assignment2/STAT842_Assignment2.tex
+++ b/Assignment2/STAT842_Assignment2.tex
@@ -124,7 +124,7 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{DUE: Monday February 17 by 11:59pm EST}
+\subtitle{DUE: Monday February 24 by 11:59pm EST}
 \author{}
 \date{\vspace{-2.5em}}
 
@@ -199,9 +199,12 @@ piece into it.}
 \FunctionTok{library}\NormalTok{(viridis)}
 \FunctionTok{library}\NormalTok{(viridisLite)}
 \FunctionTok{library}\NormalTok{(hrbrthemes)}
-\NormalTok{extrafont}\SpecialCharTok{::}\FunctionTok{font\_import}\NormalTok{(}\AttributeTok{prompt =} \ConstantTok{FALSE}\NormalTok{)}
-\NormalTok{extrafont}\SpecialCharTok{::}\FunctionTok{loadfonts}\NormalTok{(}\AttributeTok{device =} \StringTok{"pdf"}\NormalTok{)}
-\NormalTok{tinytex}\SpecialCharTok{::}\FunctionTok{tlmgr\_install}\NormalTok{(}\StringTok{"anyfontsize"}\NormalTok{)}
+\FunctionTok{library}\NormalTok{(sysfonts)}
+\FunctionTok{font\_add\_google}\NormalTok{(}\StringTok{"Roboto"}\NormalTok{)}
+
+\CommentTok{\#extrafont::font\_import(prompt = FALSE)}
+\NormalTok{extrafont}\SpecialCharTok{::}\FunctionTok{loadfonts}\NormalTok{(}\AttributeTok{device =} \StringTok{"pdf"}\NormalTok{, }\AttributeTok{quiet =} \ConstantTok{TRUE}\NormalTok{)}
+\CommentTok{\#tinytex::tlmgr\_install("anyfontsize")}
 \end{Highlighting}
 \end{Shaded}
 
@@ -258,6 +261,12 @@ table of six rows, and bimodal histogram.
 
 \includegraphics{STAT842_Assignment2_files/figure-latex/unnamed-chunk-2-1.pdf}
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{write.csv}\NormalTok{(dat\_chess, }\StringTok{"dat\_chess.csv"}\NormalTok{, }\AttributeTok{row.names =} \ConstantTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
 \newpage
 
 Q1) Grammar of Tables (12 marks) Make a \texttt{gt} table of the 20 rows
@@ -291,18 +300,14 @@ Show your code and the resulting table
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\FunctionTok{library}\NormalTok{(hrbrthemes)}
-\FunctionTok{import\_roboto\_condensed}\NormalTok{()}
 \FunctionTok{library}\NormalTok{(dplyr)}
 \FunctionTok{library}\NormalTok{(gt)}
 
-\NormalTok{q1\_idx }\OtherTok{=} \FunctionTok{seq}\NormalTok{(}\AttributeTok{from=}\DecValTok{1}\NormalTok{, }\AttributeTok{to=}\DecValTok{19001}\NormalTok{, }\AttributeTok{by=}\DecValTok{1000}\NormalTok{) }\CommentTok{\#1, 1001, 2001, 3001, ... , 19001}
+\NormalTok{q1\_idx }\OtherTok{=} \FunctionTok{seq}\NormalTok{(}\AttributeTok{from=}\DecValTok{1}\NormalTok{, }\AttributeTok{to=}\DecValTok{19001}\NormalTok{, }\AttributeTok{by=}\DecValTok{1000}\NormalTok{) }\CommentTok{\# 1, 1001, 2001, ..., 19001}
 \NormalTok{dat\_chess\_q1 }\OtherTok{=}\NormalTok{ dat\_chess[q1\_idx, ]}
 
 \NormalTok{dat\_chess\_q1 }\SpecialCharTok{\%\textgreater{}\%}
-    \FunctionTok{arrange}\NormalTok{(}
-    \FunctionTok{desc}\NormalTok{(dat\_chess\_q1}\SpecialCharTok{$}\NormalTok{remove\_value)}
-\NormalTok{  ) }\SpecialCharTok{\%\textgreater{}\%}
+  \FunctionTok{arrange}\NormalTok{(}\FunctionTok{desc}\NormalTok{(remove\_value)) }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{gt}\NormalTok{() }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{tab\_header}\NormalTok{(}
     \AttributeTok{title =} \StringTok{"Queens and False Hydras"}\NormalTok{,}
@@ -323,13 +328,10 @@ Show your code and the resulting table
 \NormalTok{    )}
 \NormalTok{  ) }\SpecialCharTok{\%\textgreater{}\%}
   \FunctionTok{tab\_style}\NormalTok{(}
-    \AttributeTok{style =} \FunctionTok{list}\NormalTok{(}
-      \FunctionTok{cell\_text}\NormalTok{(}
-        \AttributeTok{font =} \StringTok{"Roboto"}
-\NormalTok{      )}
+    \AttributeTok{style =} \FunctionTok{cell\_text}\NormalTok{(}
+      \AttributeTok{font =} \StringTok{"Roboto"}
 \NormalTok{    ),}
-    \AttributeTok{locations =} \FunctionTok{cells\_body}\NormalTok{(}
-\NormalTok{    )}
+    \AttributeTok{locations =} \FunctionTok{cells\_body}\NormalTok{()}
 \NormalTok{  )}
 \end{Highlighting}
 \end{Shaded}
@@ -367,6 +369,8 @@ target\_piece & loc\_removed & remove\_value & file\_removed & rank\_removed \\
 \bottomrule
 \end{tabular*}
 \end{table}
+
+\newpage
 
 \newpage
 
@@ -414,11 +418,10 @@ especially for the fill gradient.
 
 \NormalTok{dat\_chess\_q2}\SpecialCharTok{$}\NormalTok{target\_piece }\OtherTok{=} \FunctionTok{factor}\NormalTok{(dat\_chess}\SpecialCharTok{$}\NormalTok{target\_piece, }\AttributeTok{levels =} \FunctionTok{c}\NormalTok{(}\StringTok{"B"}\NormalTok{, }\StringTok{"N"}\NormalTok{, }\StringTok{"Q"}\NormalTok{, }\StringTok{"R"}\NormalTok{), }\AttributeTok{labels =}\NormalTok{ labels)}
 
-\FunctionTok{ggplot}\NormalTok{(dat\_chess\_q2, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ remove\_value, }\AttributeTok{y =} \FunctionTok{reorder}\NormalTok{(target\_piece, remove\_value, }\AttributeTok{FUN=}\NormalTok{mean), }\AttributeTok{fill =}\NormalTok{ target\_piece)) }\SpecialCharTok{+}
-  \FunctionTok{geom\_density\_ridges}\NormalTok{(}\AttributeTok{alpha=}\FloatTok{0.5}\NormalTok{, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{color =}\NormalTok{ target\_piece), }\AttributeTok{scale =} \FloatTok{0.9}\NormalTok{) }\SpecialCharTok{+}
+\FunctionTok{ggplot}\NormalTok{(dat\_chess\_q2, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ remove\_value, }\AttributeTok{y =} \FunctionTok{reorder}\NormalTok{(target\_piece, remove\_value), }\AttributeTok{fill=} \FunctionTok{stat}\NormalTok{(x))) }\SpecialCharTok{+}
   \FunctionTok{coord\_cartesian}\NormalTok{(}\AttributeTok{clip =} \StringTok{"off"}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{scale\_color\_viridis\_d}\NormalTok{() }\SpecialCharTok{+}
-  \FunctionTok{scale\_fill\_viridis\_d}\NormalTok{() }\SpecialCharTok{+}
+  \FunctionTok{geom\_density\_ridges\_gradient}\NormalTok{(}\AttributeTok{scale =} \DecValTok{1}\NormalTok{, }\AttributeTok{alpha=}\FloatTok{0.5}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{scale\_fill\_viridis\_c}\NormalTok{(}\AttributeTok{option =} \StringTok{"A"}\NormalTok{) }\SpecialCharTok{+}
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Remove value"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Target Piece"}\NormalTok{,}
        \AttributeTok{title =} \StringTok{"Ridgeline plot of piece removal values"}\NormalTok{) }\SpecialCharTok{+}
   \FunctionTok{theme\_ipsum}\NormalTok{() }\SpecialCharTok{+}
@@ -521,38 +524,74 @@ To add the image, see \texttt{geom\_image()} in
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\FunctionTok{library}\NormalTok{(ggimage)}
+\CommentTok{\# use geom\_image to place the image behind the tile plot }
+
 \FunctionTok{library}\NormalTok{(ggplot2)}
-\FunctionTok{library}\NormalTok{(dplyr)}
+\FunctionTok{library}\NormalTok{(ggimage)}
+\FunctionTok{library}\NormalTok{(viridis)}
 \FunctionTok{library}\NormalTok{(plyr)}
+\end{Highlighting}
+\end{Shaded}
 
-\NormalTok{dat\_chess\_q4 }\OtherTok{=} \FunctionTok{subset}\NormalTok{(dat\_chess, target\_piece }\SpecialCharTok{==} \StringTok{"N"}\NormalTok{)}
+\begin{verbatim}
+## ------------------------------------------------------------------------------
+\end{verbatim}
 
-\NormalTok{dat\_chess\_q4 }\OtherTok{=} \FunctionTok{ddply}\NormalTok{(dat\_chess\_q4, }\StringTok{"loc\_removed"}\NormalTok{, summarize,}
-                     \AttributeTok{file =}\NormalTok{ file\_removed[}\DecValTok{1}\NormalTok{],}
-                     \AttributeTok{rank =}\NormalTok{ rank\_removed[}\DecValTok{1}\NormalTok{],}
-                     \AttributeTok{value =} \FunctionTok{mean}\NormalTok{(remove\_value),}
-                     \AttributeTok{count =} \FunctionTok{length}\NormalTok{(remove\_value))}
+\begin{verbatim}
+## You have loaded plyr after dplyr - this is likely to cause problems.
+## If you need functions from both plyr and dplyr, please load plyr first, then dplyr:
+## library(plyr); library(dplyr)
+\end{verbatim}
 
-\NormalTok{dat\_chess\_q4}\SpecialCharTok{$}\NormalTok{filename }\OtherTok{=}\NormalTok{ letters[dat\_chess\_q4}\SpecialCharTok{$}\NormalTok{file]}
+\begin{verbatim}
+## ------------------------------------------------------------------------------
+\end{verbatim}
 
+\begin{verbatim}
+## 
+## Attaching package: 'plyr'
+\end{verbatim}
+
+\begin{verbatim}
+## The following objects are masked from 'package:dplyr':
+## 
+##     arrange, count, desc, failwith, id, mutate, rename, summarise,
+##     summarize
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# Filter for target piece "N" (Knight)}
+\NormalTok{dat\_chess\_q4 }\OtherTok{\textless{}{-}} \FunctionTok{subset}\NormalTok{(dat\_chess, target\_piece }\SpecialCharTok{==} \StringTok{"N"}\NormalTok{)}
+
+\CommentTok{\# Summarize data}
+\NormalTok{dat\_chess\_q4 }\OtherTok{\textless{}{-}} \FunctionTok{ddply}\NormalTok{(dat\_chess\_q4, }\StringTok{"loc\_removed"}\NormalTok{, summarize,}
+                      \AttributeTok{file =}\NormalTok{ file\_removed[}\DecValTok{1}\NormalTok{],}
+                      \AttributeTok{rank =}\NormalTok{ rank\_removed[}\DecValTok{1}\NormalTok{],}
+                      \AttributeTok{value =} \FunctionTok{mean}\NormalTok{(remove\_value),}
+                      \AttributeTok{count =} \FunctionTok{length}\NormalTok{(remove\_value))}
+
+\CommentTok{\# Convert file number to letter notation}
+\NormalTok{dat\_chess\_q4}\SpecialCharTok{$}\NormalTok{filename }\OtherTok{\textless{}{-}}\NormalTok{ letters[dat\_chess\_q4}\SpecialCharTok{$}\NormalTok{file]}
+
+\CommentTok{\# Define the image path}
+\NormalTok{img\_path }\OtherTok{\textless{}{-}} \StringTok{"starting{-}positon{-}algebraic.jpg"}
+
+\CommentTok{\# Create the plot with geom\_raster and overlay an image using geom\_image}
 \NormalTok{plot }\OtherTok{\textless{}{-}} \FunctionTok{ggplot}\NormalTok{(dat\_chess\_q4, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ file, }\AttributeTok{y =}\NormalTok{ rank, }\AttributeTok{fill =}\NormalTok{ value)) }\SpecialCharTok{+}
-  \FunctionTok{geom\_tile}\NormalTok{() }\SpecialCharTok{+}
-  \FunctionTok{scale\_fill\_viridis}\NormalTok{() }\SpecialCharTok{+}
-  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{breaks =} \DecValTok{1}\SpecialCharTok{:}\DecValTok{8}\NormalTok{, }\AttributeTok{labels =}\NormalTok{ letters[}\DecValTok{1}\SpecialCharTok{:}\DecValTok{8}\NormalTok{]) }\SpecialCharTok{+}
-  \FunctionTok{scale\_y\_continuous}\NormalTok{(}\AttributeTok{breaks =} \DecValTok{1}\SpecialCharTok{:}\DecValTok{8}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{theme\_minimal}\NormalTok{() }\SpecialCharTok{+}
+  \FunctionTok{geom\_image}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =} \FloatTok{4.3}\NormalTok{, }\AttributeTok{y =} \FloatTok{4.12}\NormalTok{, }\AttributeTok{image =}\NormalTok{ img\_path), }\AttributeTok{size =} \FloatTok{1.01}\NormalTok{, }\AttributeTok{alpha =} \FloatTok{0.1}\NormalTok{) }\SpecialCharTok{+}  \CommentTok{\# Adjust size and position as needed }
+  \FunctionTok{geom\_raster}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{alpha =} \FloatTok{0.5}\NormalTok{)) }\SpecialCharTok{+} 
+  \FunctionTok{scale\_fill\_viridis}\NormalTok{() }\SpecialCharTok{+} 
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{breaks =} \DecValTok{1}\SpecialCharTok{:}\DecValTok{8}\NormalTok{, }\AttributeTok{labels =}\NormalTok{ letters[}\DecValTok{1}\SpecialCharTok{:}\DecValTok{8}\NormalTok{]) }\SpecialCharTok{+} 
+  \FunctionTok{scale\_y\_continuous}\NormalTok{(}\AttributeTok{breaks =} \DecValTok{1}\SpecialCharTok{:}\DecValTok{8}\NormalTok{) }\SpecialCharTok{+} 
+  \FunctionTok{theme\_minimal}\NormalTok{() }\SpecialCharTok{+} 
   \FunctionTok{theme}\NormalTok{(}\AttributeTok{legend.position =} \StringTok{"none"}\NormalTok{,}
         \AttributeTok{axis.title =} \FunctionTok{element\_blank}\NormalTok{(),}
         \AttributeTok{panel.grid =} \FunctionTok{element\_blank}\NormalTok{(),}
-        \AttributeTok{panel.background =} \FunctionTok{element\_rect}\NormalTok{(}\AttributeTok{fill =} \StringTok{"white"}\NormalTok{))}
-
-
-\FunctionTok{ggbackground}\NormalTok{(plot, }\StringTok{"starting{-}positon{-}algebraic.jpg"}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{geom\_image}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{image =} \StringTok{"starting{-}positon{-}algebraic.jpg"}\NormalTok{), }
-             \AttributeTok{x =} \FloatTok{0.6}\NormalTok{, }\AttributeTok{y =} \FloatTok{0.6}\NormalTok{, }
-             \AttributeTok{xmin =} \DecValTok{2}\NormalTok{, }\AttributeTok{xmax =} \DecValTok{10}\NormalTok{, }\AttributeTok{ymin =} \DecValTok{1}\NormalTok{, }\AttributeTok{ymax =} \DecValTok{8}\NormalTok{) }\SpecialCharTok{+}
+        \AttributeTok{plot.background =} \FunctionTok{element\_rect}\NormalTok{(}\AttributeTok{fill =} \ConstantTok{NA}\NormalTok{)) }\SpecialCharTok{+}
   \FunctionTok{coord\_fixed}\NormalTok{(}\AttributeTok{ratio =} \DecValTok{1}\NormalTok{) }
+\CommentTok{\# Display the plot}
+\FunctionTok{print}\NormalTok{(plot)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -589,6 +628,6 @@ save an image.
 Hint 2: In R markdown, you can embed an image with
 \texttt{!{[}{]}(filename.png)}
 
-\includegraphics{Histogram_of_Piece_remove.png}
+\includegraphics{HistogramOfRemoveValue_ManimCE_v0.19.0.png}
 
 \end{document}
